# trollsift

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .stickler.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  README.md  RELEASING.md  appveyor.yml  changelog.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yaml  deploy-sdist.yaml
doc/: Makefile
doc/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
tests/integrationtests/: __init__.py  test_parser.py
tests/regressiontests/: test_parser.py
tests/unittest/: test_parser.py
tests/unittests/: __init__.py  test_parser.py
trollsift/: __init__.py  parser.py  version.py
trollsift/tests/: __init__.py
trollsift/tests/integrationtests/: __init__.py  test_parser.py
trollsift/tests/regressiontests/: __init__.py  test_parser.py
trollsift/tests/unittests/: __init__.py  test_parser.py
