[metadata]
description-file = README.md

[bdist_rpm]
release=1

[bdist_wheel]
universal=1

[flake8]
max-line-length = 120

[versioneer]
VCS = git
style = pep440
versionfile_source = trollsift/version.py
versionfile_build =
tag_prefix = v

[coverage:run]
omit =
    trollsift/version.py
    versioneer.py
